@@ -26,14 +26,11 @@ $CMS_ADMIN_TITLE='adminhome';
 $CMS_ADMIN_TITLE='mainmenu';
 $CMS_EXCLUDE_FROM_RECENT=1;
 
-
 require_once("../lib/include.php");
 
 // if this page was accessed directly, and the secure param name is not in the URL
 // but it is in the session, assume it is correct.
-if( isset($_SESSION[CMS_USER_KEY]) && !isset($_GET[CMS_SECURE_PARAM_NAME]) ) {
-  $_GET[CMS_SECURE_PARAM_NAME] = $_SESSION[CMS_USER_KEY];
-}
+if( isset($_SESSION[CMS_USER_KEY]) && !isset($_GET[CMS_SECURE_PARAM_NAME]) ) $_REQUEST[CMS_SECURE_PARAM_NAME] = $_SESSION[CMS_USER_KEY];
 
 check_login();
 
@@ -41,6 +38,3 @@ include_once("header.php");
 $section = (isset($_GET['section'])) ? trim($_GET['section']) : '';
 $themeObject->do_toppage($section);
 include_once("footer.php");
-
-
-?>
