@@ -25,7 +25,6 @@ $orig_memory = (function_exists('memory_get_usage')?memory_get_usage():0);
 $starttime = microtime();
 
 require_once("../lib/include.php");
-debug_buffer("original memory is ".$orig_memory);
 $urlext='?'.CMS_SECURE_PARAM_NAME.'='.$_SESSION[CMS_USER_KEY];
 
 check_login();
@@ -101,5 +100,3 @@ if( $USE_THEME ) {
     echo '</div>';
     include_once("footer.php");
 }
-
-?>
