@@ -261,16 +261,24 @@ echo $html;
 if( $page == __CMS_PREVIEW_PAGE__ && isset($_SESSION['__cms_preview__']) ) unset($_SESSION['__cms_preview__']);
 
 $debug = (defined('CMS_DEBUG') && CMS_DEBUG)?TRUE:FALSE;
-if( $debug || (isset($config['show_performance_info']) && ($showtemplate == true)) ) {
-    $db = $_app->GetDb();
+if( $debug || isset($config['log_performance_info']) || (isset($config['show_performance_info']) && ($showtemplate == true)) ) {
     $memory = (function_exists('memory_get_usage')?memory_get_usage():0);
     $memory = $memory - $orig_memory;
-    $memory_peak = (function_exists('memory_get_peak_usage')?memory_get_peak_usage():0);
+    $db = $_app->GetDb();
+    $sql_time = round($db->query_time_total,5);
+    $sql_queries = $db->query_count;
+    $memory_peak = (function_exists('memory_get_peak_usage')?memory_get_peak_usage():'n/a');
     $endtime = microtime();
+    $time = microtime_diff($starttime,$endtime);
 
-    $txt = microtime_diff($starttime,$endtime).' / '.round($db->query_time_total,7).' / '.(isset($db->query_count)?$db->query_count:'')." / {$memory} / {$memory_peak}";
-    debug_display($txt);
-    //$txt = strftime('%x %X').' :: '.$txt;
+    if( isset($config['log_performance_info']) ) {
+        $out = [ time(), $_SERVER['REQUEST_URI'], $_SERVER['REQUEST_METHOD'], $time, $sql_time, $queries, $memory, $memory_peak ];
+        $filename = TMP_CACHE_LOCATION.'/performance.log';
+        error_log(implode('|',$out)."\n", 3, $filename);
+    } else {
+        $txt = "Time: $time / SQL: {$sql_time}s for $sql_queries queries / Net Memory: {$memory} / Peak: {$memory_peak}";
+        echo '<div style="clear: both;"><pre><code>'.$txt.'</code></pre></div>';
+    }
 }
 
 if( $debug || is_sitedown() ) {
