@@ -87,7 +87,6 @@
 
 	if( self.options.lock_timeout ) {
 	    // setup our event handlers
-	    console.log('creating initial lock');
 	    self._setup_handlers();
   	    // do our initial lock.
 	    self._lock();
@@ -173,7 +172,6 @@
 	    self._error_handler(data.error);
             return;
           }
-	    console.debug('lock succeeded');
 	  if( self.options.lock_handler ) self.options.lock_handler();
 	  self._settings.lock_id = data.lock_id;
 	  self._settings.lock_expires = data.lock_expires;
@@ -183,11 +181,10 @@
     },
 
     relock: function() {
-        console.log('relocking');
 	this._lock();
     },
 
-    unlock: function() {
+    unlock: function(ajax) {
 	var self = this;
 	if( self._settings.locked && self._settings.lock_id > 0 ) {
             // do ajax lock
@@ -198,49 +195,45 @@
             opts.oid  = this.options.oid;
             opts.uid  = this.options.uid;
             opts.lock_id = this._settings.lock_id;
-	    if( navigator.sendBeacon ) {
-		console.debug('sending a beacon');
-		navigator.sendBeacon(self._settings.ajax_url,JSON.stringify(opts));
-
-		data = { status: 'success' }
-    		return $.Deferred().resolve(data,'');
-	    }
-	    else {
-		console.debug('ajax unlocking');
-		var _jqxhr = $.ajax({
-		    type: 'POST',
-		    url: self._settings.ajax_url,
-		    async: false,
-		    cache: false,
-		    data: opts
-		}).pipe(function(data,textStatus,xhr) {
-		    console.debug('in pipe '+textStatus+' status is '+xhr.status);
-		    if( xhr.status != 200 ) {
-			console.debug('pipe status is '+xhr.status);
-			return $.Deferred().reject(data,textStatus);
-		    }
-		    if( textStatus != 'success' ) {
-			console.debug('pipe bad textStatus');
-			return $.Deferred().reject(data,textStatus);
-		    }
-  		    if( data.status == 'error' ) {
-			console.debug('pipe got status = error');
-			return $.Deferred().reject(data,textStatus);
-		    }
-		}).done(function(data,textStatus){
-		    console.debug('unlock succeeded');
-		    if( self.options.unlock_handler ) self.options.unlock_handler();
+	    if( !ajax && navigator.sendBeacon ) {
+		var r = navigator.sendBeacon(self._settings.ajax_url,JSON.stringify(opts));
+		if( r ) {
 		    self._settings.locked = 0;
 		    self._settings.lock_id = -1;
 		    self._settings.lock_expires = -1;
-		}).fail(function(xhr, textStatus, errorThrown){
-		    console.debug('unlock failed: '+textStatus+' // '+errorThrown + ' // '+xhr.status);
-		    setTimeout(function(){
-			console.debug('in timeout');
-		    },3000)
-		});
-		return _jqxhr;
+		    data = { status: 'success' }
+    		    return $.Deferred().resolve(data,'');
+		}
+		console.debug('beacon failed');
 	    }
+
+	    var _jqxhr = $.ajax({
+		type: 'POST',
+		url: self._settings.ajax_url,
+		cache: false,
+		data: opts
+	    }).pipe(function(data,textStatus,xhr) {
+		if( xhr.status != 200 ) {
+		    return $.Deferred().reject(data,textStatus);
+		}
+		if( textStatus != 'success' ) {
+		    return $.Deferred().reject(data,textStatus);
+		}
+  		if( data.status == 'error' ) {
+		    return $.Deferred().reject(data,textStatus);
+		}
+	    }).done(function(data,textStatus){
+		if( self.options.unlock_handler ) self.options.unlock_handler();
+		self._settings.locked = 0;
+		self._settings.lock_id = -1;
+		self._settings.lock_expires = -1;
+	    }).fail(function(xhr, textStatus, errorThrown){
+		console.debug('unlock failed: '+textStatus+' // '+errorThrown + ' // '+xhr.status);
+		setTimeout(function(){
+		    console.debug('in timeout');
+		},3000)
+	    });
+	    return _jqxhr;
         } else {
 	    data = { status: 'success' }
     	    return $.Deferred().resolve(data,'');
