@@ -36,12 +36,14 @@ Core - General
   - Fix problem with the use_smartycache thing in system information.
   - Fix notice in useroperations.
   - Fixes problems where all files (including dot files) had to be writable before creating a module XML file.
-  - Fixes minor notice in user operations.  
+  - Fixes minor notice in user operations.
   - Fixes for namespaced modules.
   - Fixes an issue in CmsLayoutTemplate when creating a template from a type.
   - Fixes an issue where a 404 handler error page would not be rendered correctly if for some reason the route did not specify a page id to load.
   - More fixes to cms_url class.
   - Numerous minor optimizations
+  - Add the ability to content types the ability to set basic attributes for properties from within the page type definition.
+  - Fixes problems with pagelink and link content types not being properly editable by additional editors.
 
 Navigator v1.0.4
   - Minor optimizations
@@ -61,6 +63,7 @@ Content Manager
   - Now allow filtering pages by owner, editor, template, or design.  Only for admins with Modify any page, or Manage all content permissions.
   - Fix problems with auto-refresh being too fast for some operations
   - Now auto scroll to the first matched page in a find.
+  - Additional editors of a page cannot change the content type.  Only owners, or users with the Manage all Content permissions.
 
 DesignManager
   - Move the designs tab of the main interface into third position.
@@ -120,7 +123,7 @@ Phar Installer
 Module Manager
   - Fixes problems where all files (including dot files) had to be writable before creating a module XML file.
 
-  
+
 Version 2.1.3 - Black Point
 ----------------------------------
 Core - General
